Add comments for all packages and exported symbols
Enable linter that enforces those

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -41,3 +41,9 @@ linters:
 linters-settings:
   gocyclo:
     min-complexity: 12
+issues:
+  include:
+    # don't suppress missing exported method/function parameters
+    - EXC0012
+    # don't suppress missing package level comment
+    - EXC0015
