Support for UDP connection requests (#26)
* Support for UDP connection requests

* WIP connection request authentication

* CR auth

* Make CR authentication optional

* Only set CR servers in datamodel if configured

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -38,9 +38,13 @@ linters:
     - usestdlibvars
     - wastedassign
     - whitespace
+
 linters-settings:
   gocyclo:
     min-complexity: 12
+  nestif:
+    min-complexity: 6
+
 issues:
   include:
     # don't suppress missing exported method/function parameters
